--- a/app/partials/directives/fzField.html
+++ b/app/partials/directives/fzField.html
@@ -1,7 +1,8 @@
 <div class="control-group">
-	<label class="control-label">{{label}}:</label>
+	<label class="control-label" >{{label}}:</label>
 	<div class="controls">
-		<input type="text" placeholder="{{placeholder}}" ng-model="value"> <i class="help-inline icon-question-sign" ng-click="showHelp = !showHelp" ng-init="showHelp=false"></i>
-		<span class="help-block" ng-show="showHelp">{{locales.string(documentation)}}</span>
+		<input type="text" placeholder="{{placeholder}}" name="{{name}}" ng-model="value"> 
+		<i class="help-inline icon-question-sign" ng-click="showHelp = !showHelp" ng-init="showHelp=false"></i>
+		<span class="help-block" ng-show="showHelp"><div fz-markdown documentation="{{locales.string(documentation)}}"></div></span>
 	</div>
 </div>
