--- a/app/partials/form.html
+++ b/app/partials/form.html
@@ -4,8 +4,8 @@
 		<div class="tab-pane" ng-repeat="formInfo in forms" title="{{formInfo.label}}" value="{{formInfo.id}}">
 			<form class="form-horizontal" ng-controller="XsdCtrl">
 				
-				<fz-field-set ng-model="form.rootElement">
-				</fz-field-set>
+				<fz-fieldset ng-model="form.rootElement">
+				</fz-fieldset>
 				
 				<fieldset>
 					<legend>Debug Info</legend>
