--- a/app/partials/directives/fzField.html
+++ b/app/partials/directives/fzField.html
@@ -1,8 +1,8 @@
 <div class="control-group">
 	<label class="control-label" >{{label}}:</label>
 	<div class="controls">
-		<input type="text" placeholder="{{placeholder}}" name="{{name}}" ng-model="value"> 
+		<input type="text" placeholder="{{placeholder}}" name="{{name}}" ng-model="value">
 		<i class="help-inline icon-question-sign" ng-click="showHelp = !showHelp" ng-init="showHelp=false"></i>
-		<span class="help-block" ng-show="showHelp"><div fz-markdown documentation="{{locales.string(documentation)}}"></div></span>
+		<span class="help-block" ng-show="showHelp"><div fz-markdown text="{{locales.string(documentation)}}"></div></span>
 	</div>
 </div>
