Adds validation for required fields
Tests are missing... will be fixed on the next commit.

--- a/app/partials/directives/fzField.html
+++ b/app/partials/directives/fzField.html
@@ -1,8 +1,16 @@
-<div class="control-group">
-	<label class="control-label" >{{label}}:</label>
-	<div class="controls">
-		<input type="text" placeholder="{{placeholder}}" name="{{name}}" ng-model="value">
-		<i class="help-inline icon-question-sign" ng-click="showHelp = !showHelp" ng-init="showHelp=false"></i>
-		<span class="help-block" ng-show="showHelp"><div fz-markdown text="{{locales.string(documentation)}}"></div></span>
+<ng-form name="fieldForm">
+	<div class="control-group" ng-class="controlGroupClasses">
+		<label class="control-label" ><span ng-show="data.required">*</span> {{data.label}}:</label>
+		<div class="controls">
+			<input type="text" placeholder="{{data.placeholder}}" name="input" ng-model="data.value" ng-required="data.required">
+			 <i class="help-inline icon-question-sign" ng-click="showHelp = !showHelp" ng-init="showHelp=false"></i>
+			<span class="help-block" ng-show="showHelp">
+				<div fz-markdown text="{{locales.string(data.documentation)}}"></div>
+			</span>
+
+			<div ng-show="fieldForm.input.$dirty && fieldForm.input.$invalid">
+				<span ng-show="fieldForm.input.$error.required" class="help-inline">{{locales.string('.field-required')}}</span>
+			</div>
+		</div>
 	</div>
-</div>
+</ng-form>
