--- a/app/partials/form.html
+++ b/app/partials/form.html
@@ -29,7 +29,7 @@
 						</div>
 					</div>
 
-					<div ng-show="showDebug" id="controlGroupJson">
+					<div ng-show="showDebug" id="controlGroupDebug">
 
 						<div class="control-group"  >
 							<label class="control-label">modelForm.$valid:</label>
