--- a/app/partials/directives/fzField.html
+++ b/app/partials/directives/fzField.html
@@ -1,4 +1,4 @@
-<ng-form name="fieldForm">
+<div ng-form="fieldForm">
 	<div class="control-group" ng-class="controlGroupClasses">
 		<label class="control-label" ><span ng-show="data.required">*</span> {{data.label}}:</label>
 		<div class="controls">
@@ -9,8 +9,8 @@
 			</span>
 
 			<div ng-show="fieldForm.input.$dirty && fieldForm.input.$invalid">
-				<span ng-show="fieldForm.input.$error.required" class="help-inline">{{locales.string('.field-required')}}</span>
+				<span ng-show="fieldForm.input.$error.required" class="help-inline required-message">{{locales.string('.field-required')}}</span>
 			</div>
 		</div>
 	</div>
-</ng-form>
+</div>
